# pasteAi

./: .cursorrules  LEGAL.md  README.md  about.html  answer.html  apikey.html  dashboard.html  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt-selector.html  prompt.html  settings.html  start.html  status.html  todo  tsconfig.json  vite.config.ts
.cursor/rules/: context7.mdc  cursor_rules.mdc
.github/workflows/: build.yml
scripts/: sync-cargo-version.mjs
src/: about.ts  apikey.ts  app-types.ts  main.ts  prompt-selector.ts  prompt.ts  settings.ts  start.ts  status.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  entitlements.plist  old-entitlements.plist  tauri.conf.json
src-tauri/capabilities/: about.json  default.json  start.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: events.ts  runtime.ts
src/components/: window-header.css  window-header.html
src/config/: index.ts
src/domain/: clipboard-html.ts  prompt-repository.ts  provider-gateway.ts  settings-repository.ts  store.ts  types.ts
src/features/: clipboard-improver.ts
src/platform/: notifications.ts  tray.ts  updates.ts  window-placement.ts  windows.ts
src/services/: about.ts  clipboard.ts  index.ts  llm.ts  notifications.ts  prompt-store.ts  settings-api.ts  settings-store.ts  settings-ui.ts  settings.ts  tray.ts  update.ts  window.ts
src/styles/: answer.css  dashboard.css  prompt.css  status.css  theme.css
src/types/: about.ts  index.ts  settings.ts
src/utils/: about-ui.ts  notifications.ts  settings-ui.ts
(+9 files in other folders)
